--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,6 +11,6 @@ pycparser==2.22
 pypsrp==0.8.1
 pyspnego==0.11.2
 requests==2.32.3
-setuptools==80.8.0
+tqdm==4.67.1
 urllib3==2.4.0
 wcwidth==0.2.13
