Set DNS lookup options to false in sample Kerberos configuration

--- a/docs/sample/krb5.conf
+++ b/docs/sample/krb5.conf
@@ -3,8 +3,8 @@
 
 [libdefaults]
         default_realm = SEVENKINGDOMS.LOCAL
-        dns_lookup_realm = true
-        dns_lookup_kdc = true
+        dns_lookup_realm = false
+        dns_lookup_kdc = false
 [realms]
         SEVENKINGDOMS.LOCAL = {
                 kdc = kingslanding.sevenkingdoms.local
