--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "poetry.core.masonry.api"
 [project]
 name = "evil-winrm-py"
 version = "1.5.0"
-description = "Execute commands interactively on remote Windows machines using the WinRM protocol"
+description = "Execute commands interactively on remote Windows machines using the WinRM protocol."
 authors = [
     {name = "adityatelange"}
 ]
@@ -23,7 +23,8 @@ dependencies = [
     "pypsrp (>=0.8.1,<0.9.0)",
     "prompt-toolkit (>=3.0.52,<4.0.0)",
     "tqdm (>=4.67.1,<5.0.0)",
-    "loguru (>=0.7.3,<0.8.0)"
+    "loguru (>=0.7.3,<0.8.0)",
+    "pygments (>=2.19.2,<3.0.0)"
 ]
 
 [project.optional-dependencies]
