--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 license = {text = "MIT"}
-license-files = ["LICEN[CS]E*"]
 dependencies = [
     "pypsrp (>=0.8.1,<0.9.0)",
     "prompt-toolkit (>=3.0.52,<4.0.0)",
@@ -38,5 +37,5 @@ repository = "https://github.com/adityatelange/evil-winrm-py"
 issues = "https://github.com/adityatelange/evil-winrm-py/issues"
 
 [project.scripts]
-evil-winrm-py = 'evil_winrm_py.evil_winrm_py:main'
-ewp = 'evil_winrm_py.evil_winrm_py:main'
+evil-winrm-py = 'evil_winrm_py.cli:main'
+ewp = 'evil_winrm_py.cli:main'
